* Allow specification of build and state attributes for baselines created with Synergy 6.4+ (CC-860). Patch by David Corley
* Log now captures CR Synopsis text when <cmsynergy> is used (CC-903). Patch by David Corley
* Add attribute in cmsynergysessionmonitor node (remoteclient) for remote-client connection in cm synergy (CC-910). Patch by Keith Mendoza

Origo Publisher
----------------------
* Update to use new issue handling API. Patch by Patrick Ruckstuhl.

Rake Builder
----------------------
* Make the Ruby executable and the Rake executable configurable (CC-904). Patch by Florian Gilcher.

Removed deprecated classes
----------------------
* removed CruiseControl (old launch wrapper)
* removed net.sourceforge.cruisecontrol.SelfConfiguringPlugin 
* removed net.sourceforge.cruisecontrol.bootstrappers.CurrentBuildStatusBootstrapper
* removed net.sourceforge.cruisecontrol.bootstrappers.CurrentBuildStatusFTPBootstrapper
* removed net.sourceforge.cruisecontrol.publishers.CurrentBuildStatusPublisher
* removed net.sourceforge.cruisecontrol.publishers.CurrentBuildStatusFTPPublisher

Removed deprecated methods
----------------------
* Main, P4Bootstrapper, Log, ModificationSet 

TwitterPublisher
----------------------
* Add a new plugin for publishing build results to Twitter.

UCM
----------------------
* UCM.java not creating the right command line for describing all activities (CC-886). Reported by Adrien Gracia


documentation
======================

configxml.html
----------------------
* PropertyFileLabelIncrementer: document preBuildIncrementer attribute (CC-900). Patch by David Corley
* Fix doc error attribute "localworkingdir" for <Mercurial> build trigger when it should be "localworkingcopy" (CC-893). Reported by Joona Petrell


CruiseControl Release Notes - 2.8.2

BuildLoopStatusReportTask
----------------------