@@ -7272,6 +7272,14 @@ saveLogDir="/usr/local/dev/projects/cc/logs"</td>
                 <td>No</td>
                 <td>Encoding for CruiseControl's XML log file.</td>
             </tr>
+            <tr>
+                <td>trimWhitespace</td>
+                <td>No</td>
+                <td>if true, trim whitespace from start and end of log lines.
+                    Primarily intended only to force historic "trim" behavior.
+                    Defaults to false.
+                </td>
+            </tr>
             </tbody>
         </table>
 
